--- a/practica_final.ipynb
+++ b/practica_final.ipynb
@@ -255,7 +255,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 893
+          "height": 948
         },
         "id": "Aa-MILPBMmrp",
         "outputId": "46cbc892-823c-4473-895e-45c2f2ef641c"
@@ -923,7 +923,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 635
         },
         "id": "byqRZjEVhIPu",
         "outputId": "3ca7756b-ca72-4084-cc4d-17f656ae3ab8"
@@ -1371,8 +1371,8 @@
         "# calcular los porcentajes\n",
         "porcentaje_visitas_convierten = round( (visitas_convierten / num_visitas_dia) * 100, 2)\n",
         "porcentaje_visitas_no_convierten = round( (visitas_no_convierten / num_visitas_dia) * 100, 2)\n",
-        "print(\"Convierten:\", porcentaje_visitas_convierten)\n",
-        "print(\"No Convierten:\", porcentaje_visitas_no_convierten)"
+        "print(\"Convierten:\", porcentaje_visitas_convierten, \"%\")\n",
+        "print(\"No Convierten:\", porcentaje_visitas_no_convierten, \"%\")"
       ],
       "metadata": {
         "colab": {
@@ -1392,6 +1392,169 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Por tipo de conversi n (CALL o FORM),  cu ntas hay de cada una?\n",
+        "dfFinal.groupby(['lead_type', 'dia'] )['lead_type'].count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v5-NN-E3yDWk",
+        "outputId": "bc20df80-7e36-4371-8089-60c75a4f990c"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "lead_type  dia       \n",
+              "CALL       2021-09-06    11\n",
+              "           nan           13\n",
+              "FORM       2021-09-06    14\n",
+              "Name: lead_type, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Porcentaje de usuarios recurrentes sobre el total de usuarios\n",
+        "\n",
+        "# Contar cuantos usuarios tenemos\n",
+        "total_usuarios = len(dfFinal['id_user'].unique())\n",
+        "print(total_usuarios)\n",
+        "\n",
+        "# Contar los usuarios recurrentes\n",
+        "dfFinal['user_recurrent'].value_counts()\n",
+        "usuarios_recurrentes = dfFinal[dfFinal['user_recurrent'] == True]['ts'].count()\n",
+        "print(usuarios_recurrentes)\n",
+        "\n",
+        "# Calcular el porcentaje\n",
+        "porcenta_usuarios_recurrentes = round( (usuarios_recurrentes / total_usuarios) * 100 , 2)\n",
+        "print(\"Porcentaje de usuarios recurrentes\", porcenta_usuarios_recurrentes, \"%\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6_zTomBBzZcQ",
+        "outputId": "d1e340b8-2874-48f8-bd3b-0d81ae6c1647"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5644\n",
+            "2406\n",
+            "Porcentaje de usuarios recurrentes 42.63 %\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Coche más visitado.\n",
+        "modelos_mas_visitados = dfFinal['modelo'].value_counts()\n",
+        "\n",
+        "# Eliminar home\n",
+        "modelos_mas_visitados =  modelos_mas_visitados.drop(labels=['home'])\n",
+        "\n",
+        "# Quedarnos solo con el primero\n",
+        "modelos_mas_visitados = modelos_mas_visitados.head(1)\n",
+        "modelos_mas_visitados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vIMYjbVz2uIJ",
+        "outputId": "bb225ebb-17f8-4d0f-dd0d-15cedd243e00"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tria    1465\n",
+              "Name: modelo, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Es el que más convierte?\n",
+        "\n",
+        "# Voy a filtrar el dataset para tener solo los registros que han convertido y luego los agrupo por modelo\n",
+        "mas_convierte =  dfFinal[dfFinal['conversiones'] == 1].groupby('modelo')['conversiones'].count()\n",
+        "mas_convierte = mas_convierte.drop(labels=['home'])\n",
+        "mas_convierte.sort_values(0, ascending=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "URsj1v8K-U4-",
+        "outputId": "4cda4db8-b1cf-4fe7-afb1-e29feaea7181"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: FutureWarning: In a future version of pandas all arguments of Series.sort_values will be keyword-only\n",
+            "  \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "modelo\n",
+              "clin400          5\n",
+              "tria             5\n",
+              "clin200          3\n",
+              "cea              2\n",
+              "cea-electrico    1\n",
+              "dep30            1\n",
+              "ixs-electrico    1\n",
+              "Name: conversiones, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Guardar el dataframe final en excel\n",
+        "dfFinal.to_excel(\"dataframe_final.xlsx\", index=False)"
+      ],
+      "metadata": {
+        "id": "2ftFXxmZCYj1"
+      },
+      "execution_count": 97,
+      "outputs": []
     }
   ]
 }
